--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
     "react-redux": "^8.0.4",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "eslint": "8.26.0",
