--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "i18next": "^22.0.4",
     "luxon": "^3.1.0",
     "next": "13.0.0",
+    "next-seo": "^5.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
     "react-redux": "^8.0.4",
     "react-typed": "^1.2.0",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "typescript": "4.9.3"
   }
 }
