--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
+    "react-markdown-editor-lite": "^1.3.3",
     "react-redux": "^8.0.4",
     "react-typed": "^1.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "showdown": "^2.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
